--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-slick": "^0.22.3",
+    "react-slideshow-image": "^0.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
